Update branch_name var

--- a/.github/workflows/merge-to-stage.yml
+++ b/.github/workflows/merge-to-stage.yml
@@ -14,34 +14,35 @@ jobs:
   merge-to-stage:
     name: Merge to stage after approval
     environment: merge-to-stage
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, ubuntu-latest-no-docker, developer-foundations ]
     steps:
-      - id: set-vars
-        name: Set branch name
-        run: echo "branch_name=${{ github.event.pull_request.head.ref }}" >> $GITHUB_OUTPUT
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: '0'
       - name: Check if branch is already merged
         id: is-merged
+        env:
+          BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
         run: |
           git fetch origin stage
-          git fetch origin ${{ steps.set-vars.outputs.branch_name }}
-          if git merge-base --is-ancestor origin/${{ steps.set-vars.outputs.branch_name }} origin/stage; then
+          git fetch origin ${{ BRANCH_NAME }}
+          if git merge-base --is-ancestor origin/${{ BRANCH_NAME }} origin/stage; then
             echo "Branch already merged to stage with no diff. Skipping remaining steps."
             echo "skip_merge=true" >> $GITHUB_OUTPUT
           fi
       - name: Merge to stage
         id: merge-to-stage
+        env:
+          BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
         if: steps.is-merged.outputs.skip_merge != 'true'
         run: |
           git --version
           git config --global user.name  "$(git log -n1 --pretty=format:'%an')"
           git config --global user.email "$(git log -n1 --pretty=format:'%ae')"
           git checkout stage
-          git fetch origin ${{ steps.set-vars.outputs.branch_name }}
-          git merge --no-ff --no-edit origin/"${{ steps.set-vars.outputs.branch_name }}"
+          git fetch origin ${{ BRANCH_NAME }}
+          git merge --no-ff --no-edit origin/"${{ BRANCH_NAME }}"
           git push
       - name: Login GH CLI tool
         if: steps.is-merged.outputs.skip_merge != 'true'
