--- a/.github/workflows/merge-to-develop.yml
+++ b/.github/workflows/merge-to-develop.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   merge-to-develop:
     name: Merge to develop
-    runs-on: [ self-hosted, ubuntu-latest-no-docker, developer-foundations ]
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Merging ${{ github.ref_name }} to develop..."
       - name: Checkout
