--- a/.github/workflows/merge-to-stage.yml
+++ b/.github/workflows/merge-to-stage.yml
@@ -14,7 +14,7 @@ jobs:
   merge-to-stage:
     name: Merge to stage after approval
     environment: merge-to-stage
-    runs-on: [ self-hosted, ubuntu-latest-no-docker, developer-foundations ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
