--- a/.github/workflows/merge-to-stage.yml
+++ b/.github/workflows/merge-to-stage.yml
@@ -26,8 +26,8 @@ jobs:
           BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
         run: |
           git fetch origin stage
-          git fetch origin ${{ BRANCH_NAME }}
-          if git merge-base --is-ancestor origin/${{ BRANCH_NAME }} origin/stage; then
+          git fetch origin "$BRANCH_NAME"
+          if git merge-base --is-ancestor origin/"$BRANCH_NAME" origin/stage; then
             echo "Branch already merged to stage with no diff. Skipping remaining steps."
             echo "skip_merge=true" >> $GITHUB_OUTPUT
           fi
@@ -41,8 +41,8 @@ jobs:
           git config --global user.name  "$(git log -n1 --pretty=format:'%an')"
           git config --global user.email "$(git log -n1 --pretty=format:'%ae')"
           git checkout stage
-          git fetch origin ${{ BRANCH_NAME }}
-          git merge --no-ff --no-edit origin/"${{ BRANCH_NAME }}"
+          git fetch origin "$BRANCH_NAME"
+          git merge --no-ff --no-edit origin/"$BRANCH_NAME"
           git push
       - name: Login GH CLI tool
         if: steps.is-merged.outputs.skip_merge != 'true'
